<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PlayerActivity"
    android:gravity="center"
    android:layout_marginTop="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/back_button_pa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_icon"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"/>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/playing"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="NestedWeights"/>

        <ImageButton
            android:id="@+id/fav_btn_pa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/favourite_empty_icon"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favourites_empty_btn"/>
    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/song_image_pa"
        android:layout_weight="1"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/music_note_icon"
        android:background="@color/black"
        android:layout_marginTop="10dp"
        app:shapeAppearanceOverlay="@style/rounded_square"/>

    <TextView
        android:id="@+id/song_name_pa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/previous_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_btn"/>

        <ImageButton
            android:id="@+id/play_pause_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause_icon"
            android:background="@drawable/custom_shape"
            android:contentDescription="@string/play_btn"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>

        <ImageButton
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_icon"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_btn"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/repeat_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@android:color/transparent"
        android:contentDescription="@string/repeat_btn"
        android:src="@drawable/repeat_icon"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/start_text_pa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start_text"
            android:gravity="center_vertical"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_pa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/end_text_pa"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/end_text"
            android:gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>