<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:padding="5dp"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/song_image"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:background="@color/holo_blue_dark"
        android:contentDescription="@string/song_image"
        android:gravity="center_vertical"
        android:src="@drawable/music_note_icon" />

    <TextView
        android:id="@+id/song_name"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/song_image"
        android:layout_toStartOf="@id/song_duration"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:text="@string/start_text"
        android:layout_alignParentEnd="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginHorizontal="5dp"
        android:gravity="center"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/song_artist"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_artist"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/song_image"
        android:layout_toStartOf="@id/song_duration"
        android:layout_below="@id/song_name"
        android:layout_marginTop="2dp"
        android:singleLine="true"/>

</RelativeLayout>