<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="?attr/themeColor"
    android:layout_margin="10dp">

    <ImageView
        android:id="@+id/song_image_playlist"
        android:layout_width="200dp"
        android:layout_height="185dp"
        android:src="@drawable/music_note_icon"
        android:contentDescription="@string/playlist_image"/>

    <TextView
        android:id="@+id/song_name_playlist"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/playlist_text"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="180dp"
        android:layout_gravity="start"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>

    <ImageButton
        android:id="@+id/delete_btn_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="140dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"
        android:src="@drawable/delete_icon"
        app:tint="?attr/themeColor" />

</com.google.android.material.card.MaterialCardView>