<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NowPlaying"
    android:background="?attr/themeColor">

    <ImageView
        android:id="@+id/song_image_np"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:contentDescription="@string/song_image"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen" />

    <ImageButton
        android:id="@+id/play_btn_np"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play_icon"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"
        android:background="?attr/themeColor"
        android:contentDescription="@string/play_btn"/>

    <TextView
        android:id="@+id/song_name_np"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_toStartOf="@id/play_btn_np"
        android:layout_toEndOf="@id/song_image_np"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="10dp"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"/>

</RelativeLayout>