<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout
        android:id="@+id/linearlayout_playd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/themeColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp">

        <ImageButton
            android:id="@+id/back_btn_pd"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/playlist_name_pd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/playlist_section"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:singleLine="true"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_playlistd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout_playd"
        android:paddingBottom="150dp"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playlist_shuffle_btn_pd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="92dp"
        android:visibility="invisible"
        app:backgroundTint="@android:color/white"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="?attr/themeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="?attr/themeColor"
        app:strokeWidth="3dp" />

    <LinearLayout
        android:id="@+id/linearlayout_pdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/themeColor"
        app:layout_constraintEnd_toEndOf="parent">

        <!--Add Buttons-->
        <Button
            android:id="@+id/playlist_add_btn_pd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/add_icon"
            android:text="@string/add_button"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <!--Remove Buttons-->
        <Button
            android:id="@+id/playlist_remove_btn_pd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/remove_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:drawableTop="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>