<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Shuffle Buttons-->
                <Button
                    android:id="@+id/shuffle_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/shuffle_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_button"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <!--Favourites Buttons-->
                <Button
                    android:id="@+id/favourite_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourites_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/favourite_icon"
                    android:text="@string/favourites_button"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <!--Playlist Buttons-->
                <Button
                    android:id="@+id/playlist_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/playlist_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/playlist_icon"
                    android:text="@string/playlist_button"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/total_songs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_margin="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:name="com.aniketjain.playmusic.NowPlaying"
            tools:layout="@layout/fragment_now_playing"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>