<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/set_theme"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textSize="20sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginVertical="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/holo_blue_dark_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/holo_blue_dark"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/purple_500_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/purple_500"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cool_green_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_green"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/cool_pink_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_pink"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/black_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:background="@color/white"
            android:paddingStart="5dp"
            android:textSize="20sp"
            android:gravity="center|start"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort_icon"
            android:tint="@color/holo_blue_dark"
            android:padding="5dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/version"
        android:textColor="@color/black"
        android:background="@color/white"
        android:padding="21dp"
        android:textSize="20sp"
        android:gravity="top|start"
        android:layout_marginVertical="8dp"/>

</LinearLayout>